--- a/app/book/index.html
+++ b/app/book/index.html
@@ -1,20 +1,23 @@
-﻿<h1>Books</h1>
-<div class="form-container">
-    <form method="get">
-        <div class="form-group">
-            <label for="q">Search for a book</label>
-            <input type="text" id="q" class="form-control" ng-model="vm.book.q" required />
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" ng-click="vm.searchBook()">Search</button>
-        </div>
-    </form>
-
-    <div ng-if="vm.searchResult && !vm.searchResult.result_count" class="animate-if">
-        Nothing found
+﻿<div class="page-header">
+    <div class="row">
+      <div class="col-md-4 img-thumbnail">
+          <img style="width: 100%;" src="http://covers.openlibrary.org/b/isbn/{{vm.book.isbn13}}-L.jpg" />
+      </div>
+      <div class="col-md-8">
+          <h1>{{vm.book.title}}</h1>
+          <h6>by <b ng-repeat="author in vm.book.author_data">{{author.name}}{{$last ? '' : ', '}}</b></h6>
+          <p>{{vm.book.summary}}</p>
+          <hr/>
+          <p><b>ISBN</b>: {{vm.book.isbn13}}</p>
+          <p><b>Publisher</b>: {{vm.book.publisher_text}}</p>
+      </div>
     </div>
+</div>
 
+
+<div class="form-container">
     <div ng-if="vm.searchResult.result_count" class="animate-if">
+        <h2>Search results</h2>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -25,12 +28,8 @@
             </thead>
             <tbody>
                 <tr ng-repeat="book in vm.searchResult.data">
-                    <td>
-                        <a ui-sref='book({book: book.isbn13})'>
-                            <img class="thumbnail" src="http://covers.openlibrary.org/b/isbn/{{book.isbn13}}-S.jpg" />
-                        </a>
-                    </td>
-                    <td><a ui-sref='book({book: book.isbn13})'>{{book.title}}</a></td>
+                    <td><img class="thumbnail" src="http://covers.openlibrary.org/b/isbn/{{book.isbn13}}-S.jpg" /></td>
+                    <td><a href="#" ui-shref='book({book: book.isbn13})'>{{book.title}}</a></td>
                     <td>
                         <span ng-repeat="author in book.author_data">{{author.name}}{{$last ? '' : ', '}}</span>
                     </td>
