--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>MEAN Stack User Registration and Login Example Application</title>
+    <title>The GoodReads</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
     <link href="app-content/app.css" rel="stylesheet" />
@@ -15,6 +15,7 @@
             <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
             <li><a href="/login" target="_self">Logout</a></li>
             <li ng-class="{active: activeTab === 'books'}"><a ui-sref="books">Books</a></li>
+            <li ng-class="{active: activeTab === 'shelves'}"><a ui-sref="shelves">Shelves</a></li>
         </ul>
         <div class="flash-message" ng-if="flash">
             <div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
@@ -40,5 +41,6 @@
     <script src="home/index.controller.js"></script>
     <script src="account/index.controller.js"></script>
     <script src="books/index.controller.js"></script>
+    <script src="book/index.controller.js"></script>
 </body>
 </html>
