--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>The GoodReads</title>
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
     <link href="app-content/app.css" rel="stylesheet" />
 </head>
 <body class="container">
@@ -13,9 +13,16 @@
         <ul class="nav nav-tabs">
             <li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
             <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
-            <li><a href="/login" target="_self">Logout</a></li>
             <li ng-class="{active: activeTab === 'books'}"><a ui-sref="books">Books</a></li>
-            <li ng-class="{active: activeTab === 'shelves'}"><a ui-sref="shelves">Shelves</a></li>
+            <li class="dropdown" ng-class="{active: activeTab === 'shelves'}">
+                <a class="dropdown-toggle" data-toggle="dropdown" ui-sref="shelves">
+                  Shelves <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <li ng-class="{active: activeTab === 'shelves/create'}"><a ui-sref="shelves/create">Create</a></li>
+                </ul>
+            </li>
+            <li class="navbar-right"><a href="/login" target="_self">Logout</a></li>
         </ul>
         <div class="flash-message" ng-if="flash">
             <div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
@@ -32,15 +39,18 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- application scripts -->
     <script src="app.js"></script>
     <script src="app-services/user.service.js"></script>
     <script src="app-services/book.service.js"></script>
     <script src="app-services/flash.service.js"></script>
+    <script src="app-services/shelve.service.js"></script>
     <script src="home/index.controller.js"></script>
     <script src="account/index.controller.js"></script>
     <script src="books/index.controller.js"></script>
     <script src="book/index.controller.js"></script>
+    <script src="shelves/index.controller.js"></script>
 </body>
 </html>
