--- a/app/index.html
+++ b/app/index.html
@@ -4,26 +4,44 @@
     <meta charset="utf-8" />
     <title>The GoodReads</title>
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="app-content/bootstrap.paper.theme.css" rel="stylesheet" />
     <link href="app-content/app.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="container">
     <!-- header -->
     <header>
-        <ul class="nav nav-tabs">
-            <li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
-            <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
-            <li ng-class="{active: activeTab === 'books'}"><a ui-sref="books">Books</a></li>
-            <li class="dropdown" ng-class="{active: activeTab === 'shelves'}">
-                <a class="dropdown-toggle" data-toggle="dropdown" ui-sref="shelves">
-                  Shelves <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li ng-class="{active: activeTab === 'shelves/create'}"><a ui-sref="shelves/create">Create</a></li>
+
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <a class="navbar-brand" ui-sref="home">The Goodreads</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
+                    <li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
+                    <li ng-class="{active: activeTab === 'books'}"><a ui-sref="books">Books</a></li>
+                    <li class="dropdown" ng-class="{active: activeTab === 'shelves'}">
+                        <a class="dropdown-toggle" data-toggle="dropdown" ui-sref="shelves">
+                          Shelves <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li ng-class="{active: activeTab === 'shelves/create'}"><a ui-sref="shelves/create">Create</a></li>
+                        </ul>
+                    </li>
                 </ul>
-            </li>
-            <li class="navbar-right"><a href="/login" target="_self">Logout</a></li>
-        </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-right"><a href="/login" target="_self">Logout</a></li>
+                </ul>   
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+
+        
         <div class="flash-message" ng-if="flash">
             <div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
         </div>
@@ -47,6 +65,7 @@
     <script src="app-services/book.service.js"></script>
     <script src="app-services/flash.service.js"></script>
     <script src="app-services/shelve.service.js"></script>
+    <script src="app-services/quote.service.js"></script>
     <script src="home/index.controller.js"></script>
     <script src="account/index.controller.js"></script>
     <script src="books/index.controller.js"></script>
