--- a/app/home/index.html
+++ b/app/home/index.html
@@ -1,8 +1,7 @@
 ﻿<div>
 	<h1>Hi {{vm.user.firstName}}!!</h1>
 	<div ng-if="vm.quote">
-		<h2>{{vm.quote.title}}</h2>
-		<h3>{{vm.quote.quote}}</h3>
-		<h4>by {{vm.quote.author}}</h4>
+		<h2>{{vm.quote.content}}</h2>
+		<h4>by {{vm.quote.title}}</h4>
 	</div>
 </div>
